set(
  CMAKE_ARCHIVE_OUTPUT_DIRECTORY
  ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}
)
set(
  CMAKE_LIBRARY_OUTPUT_DIRECTORY
  ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}
)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}
)

set(BINOUT yaga)
set(LIBOUT yaga_lib)


set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB SOURCES "*.cpp")

add_library(${LIBOUT} ${SOURCES})
add_executable(${BINOUT} ${SOURCES})

target_include_directories(
  ${LIBOUT}
  PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
)

target_link_libraries(${BINOUT} LINK_PUBLIC -lcublas -lcudart)
